--- a/TestBlazorApp/Components/Layout/NavMenu.razor
+++ b/TestBlazorApp/Components/Layout/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">TestBlazorApp</a>
+        <a class="navbar-brand" href="">ItemsBlazorApp</a>
     </div>
 </div>
 
@@ -13,22 +13,10 @@
                 <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
             </NavLink>
         </div>
-
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
-            </NavLink>
-        </div>
-
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="weather">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
-            </NavLink>
-        </div>
         
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="people">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> People
+            <NavLink class="nav-link" href="items">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Items
             </NavLink>
         </div>
     </nav>
