--- a/TestBlazorApp/Components/_Imports.razor
+++ b/TestBlazorApp/Components/_Imports.razor
@@ -6,6 +6,6 @@
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
-@using TestBlazorApp
-@using TestBlazorApp.Components
+@using ItemsBlazorApp
+@using ItemsBlazorApp.Components
 
