--- a/TestBlazorApp/Components/App.razor
+++ b/TestBlazorApp/Components/App.razor
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="app.css" />
     <link rel="stylesheet" href="ItemsBlazorApp.styles.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
+    <link href="_content/DevExpress.Blazor.Themes/blazing-dark.bs4.min.css" rel="stylesheet" />
+
     <HeadOutlet />
 </head>
 
